<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gullycricketscoringapp.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="com.example.android.gullycricketscoringapp.MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.gullycricketscoringapp.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:paddingTop="16dp"
                android:text="@string/team_a"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:paddingBottom="20dp"
                android:paddingTop="16dp"
                android:text="0 For 0"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <Button
                android:id="@+id/plus_one_run_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo1ToTeamA"
                android:text="@string/one_run" />

            <Button
                android:id="@+id/plus_two_run_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo2ToTeamA"
                android:text="@string/two_runs" />

            <Button
                android:id="@+id/plus_four_run_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo4ToTeamA"
                android:text="@string/boundary_four_runs" />

            <Button
                android:id="@+id/plus_six_run_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo6ToTeamA"
                android:text="@string/six_runs" />

            <Button
                android:id="@+id/minus_one_wicket_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="aPlayerIsOutInTeamA"
                android:text="@string/wicket" />

            <TextView
                android:id="@+id/innings_over_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:paddingTop="16dp"
                android:text=""
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.gullycricketscoringapp.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:paddingTop="16dp"
                android:text="@string/team_b"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:paddingBottom="20dp"
                android:paddingTop="16dp"
                android:text="0 For 0"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <Button
                android:id="@+id/plus_one_run_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo1ToTeamB"
                android:text="@string/one_run"

                />

            <Button
                android:id="@+id/plus_two_run_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo2ToTeamB"
                android:text="@string/two_runs" />

            <Button
                android:id="@+id/plus_four_run_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo4ToTeamB"
                android:text="@string/boundary_four_runs" />

            <Button
                android:id="@+id/plus_six_run_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="updateScoreTo6ToTeamB"
                android:text="@string/six_runs" />

            <Button
                android:id="@+id/minus_one_wicket_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="4dp"
                android:onClick="aPlayerIsOutInTeamB"
                android:text="@string/wicket" />

            <TextView
                android:id="@+id/innings_over_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:paddingTop="16dp"
                android:text=""
                android:textColor="@color/red"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_the_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetTheScoresAndResult"
        android:text="@string/reset_scores" />

    <TextView
        android:id="@+id/match_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_the_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="4dp"
        android:paddingTop="16dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="14sp" />


</RelativeLayout>
